--- a/app/views/seq/input.html.erb
+++ b/app/views/seq/input.html.erb
@@ -5,7 +5,7 @@
                 <%= form.label("Введите количество чисел: ") %>
             </td>
             <td>
-                <%= form.text_field :num_input, :value => 10 %> <br>
+                <%= form.text_field :num, :value => 10 %> <br>
             </td>
         </tr>
         <tr>
@@ -13,7 +13,7 @@
                 <%= form.label("Введите последовательность: ") %>
             </td>
             <td>
-                <%= form.text_field :str_input, :value => "6 28 3 4 5 6 6 496 3 6" %> <br>
+                <%= form.text_field :str, :value => "6 28 3 4 5 6 6 496 3 6" %> <br>
             </td>
         </tr>
         <tr>
