--- a/app/views/seq/_show_message.erb
+++ b/app/views/seq/_show_message.erb
@@ -11,7 +11,7 @@
                 </td>                   
             </tr>
             <% adder=0%>   
-            <% @all_seqs.each do |stroka| %>    
+            <% @result.each do |stroka| %>    
                 <tr>            
                     <td>
                         <%= adder+=1%>
